# Agentic-Ai-Classroom-Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  temp_slides.html  test_html.py  test_nim.py  test_pdf.py
output/: Temperature_in_LLMs_answers.md  Temperature_in_LLMs_crew1_visualization.html  Temperature_in_LLMs_crew2_visualization.html  Temperature_in_LLMs_crew3_visualization.html  Temperature_in_LLMs_full_crew_visualization.html  Temperature_in_LLMs_questions.md  Temperature_in_LLMs_quiz.md  Temperature_in_LLMs_slides.md  Temperature_in_LLMs_slides_interactive.html
src/agentic_classroom/: __init__.py  agents.py  callbacks.py  client.py  main.py  renderer.py  tasks.py  tools.py  visualization.py
